포트폴리오 반응형 및 라우터 연결

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <link rel="stylesheet" href="./css/web.css"/>
-    <link rel="stylesheet" media="(max-device-width : 480px)" href="./css/mobile.css"/>
+    <link rel="stylesheet" media="(max-width : 480px)" href="./css/mobile.css"/>
   </head>
   <body>
     <noscript>
