--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Tuna's blog</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <script type="text/javascript" src="../src/scrollAnimation.js"></script>
   </head>
   <body>
     <noscript>
